Add copy block and cuda domain
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(CUDA REQUIRED)
 
 list(APPEND cuda_sources
     cuda_buffer.cc
+    copy_impl.cc
 )
 
 set(cuda_sources "${cuda_sources}" PARENT_SCOPE)
