cmake: add find_package(CUDA) for non-standard search paths
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -10,6 +10,7 @@
 # Setup library
 ########################################################################
 include(GrPlatform) #define LIB_SUFFIX
+find_package(CUDA)
 
 ###############################################################################
 # CUDA Dependency is required
