--- a/python/cuda/bindings/CMakeLists.txt
+++ b/python/cuda/bindings/CMakeLists.txt
@@ -37,4 +37,12 @@ GR_PYBIND_MAKE_OOT(cuda
    gr::cuda
    "${cuda_python_files}")
 
+# copy in bindings .so file for use in QA test module
+add_custom_target(
+  copy_bindings_for_tests ALL
+  COMMAND
+    ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/*.so"
+    ${CMAKE_BINARY_DIR}/test_modules/gnuradio/cuda/
+  DEPENDS cuda_python)
+
 install(TARGETS cuda_python DESTINATION ${GR_PYTHON_DIR}/gnuradio/cuda COMPONENT pythonapi)
