Add load block for testing
Signed-off-by: Josh Morman <jmorman@gnuradio.org>

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -9,5 +9,6 @@
 install(FILES
     cuda.domain.yml
     cuda_copy.block.yml
-    cuda_multiply_const_xx.block.yml DESTINATION share/gnuradio/grc/blocks
+    cuda_multiply_const_xx.block.yml
+    cuda_load.block.yml DESTINATION share/gnuradio/grc/blocks
 )
