--- a/python/cuda/CMakeLists.txt
+++ b/python/cuda/CMakeLists.txt
@@ -42,3 +42,4 @@ add_custom_target(
           ${CMAKE_BINARY_DIR}/test_modules/gnuradio/cuda/
 )
 
+GR_ADD_TEST(qa_load ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/qa_load.py)
