--- a/python/cuda/bindings/CMakeLists.txt
+++ b/python/cuda/bindings/CMakeLists.txt
@@ -30,7 +30,8 @@ include(GrPybind)
 
 list(APPEND cuda_python_files
     copy_python.cc
-    multiply_const_python.cc python_bindings.cc)
+    multiply_const_python.cc
+    load_python.cc python_bindings.cc)
 
 GR_PYBIND_MAKE_OOT(cuda 
    ../../..
